feat: Add video modal with demo placeholder
Introduced a video modal component with a demo video placeholder, including supporting HTML structure, CSS styles, and JavaScript functionality for opening and closing the modal. Updated contact email and improved icon usage and animation timing for result cards and form elements.

--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
 							<div class="result-card">
 								<div class="result-icon">
 									<i
-										class="fas fa-calendar-month"
+										class="fas fa-calendar-alt"
 									></i>
 								</div>
 								<h3>Monthly Savings</h3>
@@ -1318,9 +1318,7 @@
 						<div class="contact-info">
 							<p>
 								<i class="fas fa-envelope"></i>
-								<span
-									>info@cleanfleetsolutions.com</span
-								>
+								<span>info@example.com</span>
 							</p>
 							<p>
 								<i class="fas fa-phone"></i>
@@ -1374,6 +1372,24 @@
 				</div>
 			</div>
 		</footer>
+
+		<!-- Video Modal -->
+		<div
+			id="video-modal"
+			class="video-modal"
+		>
+			<div class="video-modal-content">
+				<span class="video-modal-close"
+					>&times;</span
+				>
+				<div class="video-container">
+					<div class="mock-video-player">
+						<i class="fas fa-play-circle"></i>
+						<p>Demo Video Placeholder</p>
+					</div>
+				</div>
+			</div>
+		</div>
 
 		<script src="script.js"></script>
 	</body>
