Embed YouTube video in modal and remove placeholder
Replaces the demo video placeholder in the modal with an embedded YouTube video. Updates script.js to dynamically insert and remove the iframe on modal open/close, and adds styles for proper iframe positioning. Removes the unused clean-fleet-landing.zip file.

--- a/index.html
+++ b/index.html
@@ -1382,12 +1382,7 @@
 				<span class="video-modal-close"
 					>&times;</span
 				>
-				<div class="video-container">
-					<div class="mock-video-player">
-						<i class="fas fa-play-circle"></i>
-						<p>Demo Video Placeholder</p>
-					</div>
-				</div>
+				<div class="video-container"></div>
 			</div>
 		</div>
 
